--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
+    "@prisma/client": "^6.15.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsdom": "^26.1.0",
@@ -25,6 +26,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
+    "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
