--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
-node_modules
-build
-npm-debug.log
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Environment
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Prisma
+# ✅ Commit schema.prisma and migrations, ignore local DB files
+*.db
+*.db-journal
+
+# Logs
+logs
+*.log
+pnpm-debug.log*
+
+# Build output
+dist/
+build/
+
+# Editor stuff
+.vscode/
+.idea/
 .DS_Store
-/src/generated/prisma
+*.swp
